fix letter-spacing changes

--- a/frontend/static/css/custom.css
+++ b/frontend/static/css/custom.css
@@ -121,3 +121,8 @@ hr {
 {
     display: inline;
 }
+
+.pure-g
+{
+    letter-spacing: normal;
+}
